# voiceclipper

./: .gitignore  CHANGELOG.md  LICENSE  README.md  phrases.example.yaml  pyproject.toml  voiceclipper.code-workspace
.cursor/rules/: run-monitoring.mdc
metadata/: example_session.json
scripts/: run-monitored.sh
src/voiceclipper/: __init__.py  __main__.py  batch.py  boundaries.py  cli.py  clipper.py  config.py  detector.py  diarizer.py  ffmpeg_io.py  manifest.py  metadata.py  pipeline.py  postprocess.py  processor.py  transcriber.py  transcript_cache.py  util.py
tests/: test_batch.py  test_boundaries.py  test_clipper.py  test_config.py  test_detector.py  test_manifest.py  test_metadata.py  test_postprocess.py  test_processor.py  test_transcript_cache.py  test_util.py
